# llms

./: .env.example  .gitignore  README.md  pyproject.toml  tox.ini
container/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/aws_infraestructure/: README.md
docs/qdrant/: README.md
notebooks/: bm25.ipynb  chatopenai.ipynb  tf_idf.ipynb
notebooks/agentic_patterns/: chain_of_thought_agent.ipynb
notebooks/development/: ingestion.ipynb
notebooks/llamaindex/: document_parsing.ipynb  ingestion.ipynb  llamaindex.ipynb
notebooks/neo4j_knowledge_graphs/: cypher_query_language.ipynb
notebooks/weaviate/: weaviate.ipynb
scripts/: docker_buildx.sh  docker_compose.sh  docker_run.sh
src/agent/: basic_agent.py  edges.py  graph.py  llm.py  nodes.py  state.py
src/agent/rag/: ingestion.py  vector_store.py
src/backend/: main.py
src/backend/routes/: agent.py  server.py
src/backend/schemas/: invoke_request.py  invoke_response.py
src/commons/: logger.py
src/frontend/: app.py
src/llms/agent/: basic_agent.py  llm.py
src/llms/agent/evaluation/: evaluation_sample.py  evaluator.py
src/llms/agent/graph/: edges.py  graph_builds.py  graph_factory.py  nodes.py  state.py
src/llms/backend/: main.py
src/llms/frontend/: app.py  main.py
terraform/: .gitignore  main.tf  terraform.tfvars  variables.tf
terraform/modules/alb/: listeners.tf  main.tf  outputs.tf  security.tf  target_groups.tf  variables.tf
terraform/modules/ec2/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs/: iam.tf  log_groups.tf  main.tf  outputs.tf  security.tf  services.tf  tasks.tf  variables.tf
terraform/modules/network/: internet_gateway.tf  main.tf  outputs.tf  variables.tf  vpc.tf
terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
(+12 files in other folders)
